--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    margin-top: 70px;
+    background-color:rgb(243, 244, 246);
+}
